--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,7 @@
     "express": "4.19.2",
     "parse": "4.1.0",
     "parse-server": "6.5.0",
-    "sharp": "^0.33.3",
-    "uuid": "^9.0.1"
+    "sharp": "^0.33.3"
   },
   "type": "module",
   "devDependencies": {
